--- a/project-measure/biblio/master.bib
+++ b/project-measure/biblio/master.bib
@@ -156,10 +156,11 @@ Conclusions:},
 	file = {Gryko et al. - 2018 - Anthropometric Variables and Somatotype of Young a.pdf:/Users/harrisonfuller/Zotero/storage/8EFGV7Z6/Gryko et al. - 2018 - Anthropometric Variables and Somatotype of Young a.pdf:application/pdf}
 }
 
-@misc{NBA:Stats,
+@misc{NBA:stats,
 	title = {{NBA}.com/{Stats} {\textbar} {Draft} {Combine} {Anthrometric}},
 	url = {https://www.nba.com/stats/draft/combine-anthro/?sort=PLAYER_NAME&dir=1},
 	urldate = {2020-11-08},
+  author = {NBA, Statistics},
 	file = {NBA.com/Stats | Draft Combine Anthrometric:/Users/harrisonfuller/Zotero/storage/T6K4WSW7/combine-anthro.html:text/html}
 }
 
@@ -181,6 +182,17 @@ author = {Bayios, I A and Bergeles, N K and Apostolidis, N G and Noutsos, K S an
 keywords = {Body Height - physiology ; Body Mass Index ; Femur - anatomy & histology ; Adipose Tissue - physiology ; Somatotypes ; Anthropometry ; Humans ; Humerus - anatomy & histology ; Psychomotor Performance - physiology ; Greece ; Sports - physiology ; Adult ; Female ; Basketball - physiology ; Body Weight - physiology ; Skinfold Thickness ; Body Composition - physiology ; Muscle, Skeletal - anatomy & histology ; Index Medicus},
 }
 
+@misc{reynolds:2019,
+	title = {Report: {NBA} proposes lowering draft age to 18 {\textbar} {NBA}.com},
+	url = {https://www.nba.com/news/nba-and-union-look-end-one-and-done},
+	language = {en},
+	urldate = {2020-11-08},
+	journal = {NBA},
+	author = {Reynolds, Tim},
+	month = feb,
+	year = {2019},
+	file = {Report\: NBA proposes lowering draft age to 18 | NBA.com:/Users/harrisonfuller/Zotero/storage/CNFAHRVB/nba-and-union-look-end-one-and-done.html:text/html}
+}
 @misc{reynolds:2019,
 	title = {Report: {NBA} proposes lowering draft age to 18 {\textbar} {NBA}.com},
 	url = {https://www.nba.com/news/nba-and-union-look-end-one-and-done},
