--- a/project-measure/project-measure-writeup.Rmd
+++ b/project-measure/project-measure-writeup.Rmd
@@ -24,7 +24,7 @@ abstract: |
   \noindent \emph{Purpose:}    Determine if a height-length-to-body ratio in an average human sample population is significantly different from professional basketball players, and formulate an optimal basket height for an average person.\vspace{0.25in}   
   
   
-  \noindent \emph{Material:}    The first dataset was an amalgamation of 180 individuals (men and women) who did not respond to any affiliation with basketball. A standard data collection form was prepared for this study, and form requirements collected all measurements. All data was recorded with typical household measuring devices. The second dataset of professional basketball players was collected by the NBA and available to the general public. Each dataset is summarized by mean, standard deviation, and correlation values were evaluated with a Shapiro-Wilk test of normality. A t-test was employed for independent sample comparisons, and a p-value < 0.05 was considered significant. Fictional team building is characterized by hierarchical clustering. \vspace{0.25in}   
+  \noindent \emph{Material:}    The first dataset was an amalgamation of 180 individuals (men and women) who did not respond to any affiliation with basketball. A standard data collection form was prepared for this study, and form requirements collected all measurements. All data was recorded with typical household measuring devices. The second dataset of professional basketball players was collected by the NBA and available to the general public. Each dataset is summarized by mean, standard deviation, and correlation values were evaluated with a Shapiro-Wilk test of normality. A t-test was employed for independent sample comparisons, and a p-value < 0.05 was considered significant. \vspace{0.25in}   
   
   
   \noindent \emph{Results:}     The ratio of hand length and hand width for professional and average participants is .1 for both groups. In both groups the reach ratio is 1.3 for both groups. The results of wingspan report 1.0 and 1.1 for average participants and professional athletes respectively. \vspace{0.25in}   
@@ -67,7 +67,7 @@ This study aims to differentiate a sample population from professional NBA baske
 \label{sec:data}
 
 
-Metric data were collected from a sample of volunteers (91 females and 88 males) for distance measurements of arms, legs, height, and interval measurements between body elements with joints in 2020 (see Appendix \ref{fig:handoutt}). Data curators were directed to collect physiological measurements of hand length, hand width, height, arm length, abdomen length, thigh length, shin-length, and foot length for each respective side. Additionally, factors to include in data acquisition were ethnicity, age, sex, hand and eye dominance, eye color, data quality determination, and time elapsed during measurements. Comparative NBA player data was sourced from combined measurements taken from the 2017 to 2020 seasons \citep{NBA:Stats}. The data includes position, player, hand length and width, height, reach, and wingspan. For this study, the use of height, reach, wingspan, hand length, and width are chosen for comparison between professional athletes and our sample population.
+Metric data were collected from a sample of volunteers (91 females and 88 males) for distance measurements of arms, legs, height, and interval measurements between body elements with joints in 2020 (see Appendix \ref{fig:handout}). Data curators were directed to collect physiological measurements of hand length, hand width, height, arm length, abdomen length, thigh length, shin-length, and foot length for each respective side. Additionally, factors to include in data acquisition were ethnicity, age, sex, hand and eye dominance, eye color, data quality determination, and time elapsed during measurements. Comparative NBA player data was sourced from combined measurements taken from the 2017 to 2020 seasons \citep{NBA:Stats}. The data includes position, player, hand length and width, height, reach, and wingspan. For this study, the use of height, reach, wingspan, hand length, and width are chosen for comparison between professional athletes and our sample population.
 
 
 Open-source NBA data and participants are summarized as mean, standard deviation, and distribution following the Pearson correlation. A comparison of independent samples is calculated by t-test, where a p-value < .05 is deemed significant.
@@ -98,13 +98,13 @@ Data used in this study utilizes a subset of the total measurements taken. Hand 
 For a standardized assessment of measurements, ratios of anatomical measurements to height were considered (see \ref{sec:appendix-table}).
 
 
-The average hand length of participants and professional basketball players are reported as .1 for both groups. A correlation of .02 for hand length of an average person and professional athlete is recorded with no statistical significance. However, hand length of an average persons appears to be moderately correlated with participant hand width (.50) and even less correlated with wingspan (.20). As a result, each feature reports some significant differences p-value < .01 while no significant findings are reported for professional basketball player hand length.
+The average hand length of participants and professional basketball players are reported as .1 for both groups. A correlation of .02 for hand length of an average person and professional athlete is recorded with no statistical significance. However, hand length of an average persons appears to be moderately correlated with participant hand width (.50) and even less correlated with wingspan (.20). As a result, each feature reports some significant differences (p-value < .01) while no significant findings are reported for professional basketball player hand length.
 
 
-Average participant hand width is reported as .1 and NBA basketball players report similar results. Hand width of an average participant is weakly correlated with reach (.32) and wingspan (.34) and some negative correlation with professional athletes reach, all features report a p-value < .05. Professional athlete hand width is weakly correlated with with professional hand length (.32) and professional wingspan (.17), where both values are reported with p-values < .001.
+Average participant hand width is reported as .1 and NBA basketball players report similar results. Hand width of an average participant is weakly correlated with reach (.32) and wingspan (.34) and some negative correlation with professional athletes reach (p-value < .05). Professional athlete hand width is weakly correlated with with professional hand length (.32) and professional wingspan (.17, p-values < .001).
 
 
-The reach of professional basketball players and average persons are reported as 1.3 for both groups. Professional athlete's reach has a weak negative correlation with an average person's hand width (-.16), moderate positive correlation with professional player hand length (.46) with corresponding p-values < .05. Correlations are observed with average hand width (.32) and wingspan (.42). The results of the t-test indicate significant differences between values (p < .01).
+The reach of professional basketball players and average persons are reported as 1.3 for both groups. Professional athlete's reach has a weak negative correlation with an average person's hand width (-.16), moderate positive correlation with professional player hand length (.46) with corresponding signifiance (p-values < .05). Correlations are observed with average hand width (.32) and wingspan (.42). The results of the t-test indicate significant differences between values (p-value < .01).
 
 
 The average wingspan of participants and NBA players is 1.0 and 1.1, respectively. When compared to professional athletes, the wingspan of an average participant is not different. However, a robust positive relationship (.72) is bound between the relationship of wingspan and reach in professional athletes (p-value < .001).
@@ -114,7 +114,7 @@ The average wingspan of participants and NBA players is 1.0 and 1.1, respectivel
 \label{sec:findings}
 
 
-Observations from the sample of participants and NBA players reveals several difference in limb proportions. Participant hand length shows a negative correlation with NBA player reach which indicates the average population will have a harder time reaching the basket as well as holding the ball to a height of 304.8 cm. Additionally, the distribution of wingspan and reach of professional athletes and the average participant favors that of the athlete (see \ref{sec:appendix-Images}). The difference in reach to hand length is supportive evidence that average hoop heights should reflect that of the normal population. If body proportions are mostly similar, reach-to-hoop-height can be considered for non-professional basketball courts. 
+Observations from the sample of participants and NBA players reveals several difference in limb proportions. Participant hand length shows a negative correlation with NBA player reach which indicates the average population will have a harder time reaching the basket as well as holding the ball to a height of 304.8 cm (see \ref{fig:comparison}). Additionally, the distribution of wingspan and reach of professional athletes and the average participant favors that of the athlete (see \ref{sec:appendix-Images}). The difference in reach to hand length is supportive evidence that average hoop heights should reflect that of the normal population. If body proportions are mostly similar, hoop-to-reach heights can be considered for non-professional basketball courts. 
 
 
 \section{Conclusion}
@@ -144,14 +144,17 @@ Comparative studies of physiological and anthropological suggest many attribute 
 \subsection{Data Provenance}
 \label{sec:appendix-data-provenance}
 
+
+
 ```{r,appendix-setup,message=FALSE}
 library(devtools);       # required for source_url
 
 # Source libraries and functions
 # 
 
-# path.to.secret = "WRITE-SOMETHING-HERE";
-path.to.secret = "/Users/harrisonfuller/OneDrive - Washington State University (email.wsu.edu)/Classes/STATS 419/__student_access__/_SECRET_/";
+##########
+path.to.secret = "";
+
 
 path.humanVerseWSU = "https://raw.githubusercontent.com/MonteShaffer/humanVerseWSU/"
 source_url( paste0(path.humanVerseWSU,"master/misc/functions-project-measure.R") );
@@ -192,8 +195,6 @@ source_url( paste0(path.github,"master/libraries/project-measure_libraries.R") )
 
 # Get measure data
 # 
-
-
 measure = utils::read.csv( paste0(path.to.secret, "measure-students.txt"), 
                            header=TRUE, quote="", sep="|");
 
@@ -203,13 +204,14 @@ measure.X = prepare.measure.data(measure,
 
 # Get NBA data
 # 
-nba <- read.table(file = paste0(path.github,"master/datasets/NBA.txt"),
+nba <- read.table(file =paste0(path.github,"master/datasets/NBA.txt"),
                   header = T, 
                   sep = "|");
 
 nba.X <- clean.nba.data(nba);
 
 ```
+
 
 \subsubsection{Scaling Measurements}
 \label{sec:appendix-scaling}
@@ -237,6 +239,53 @@ height.prop.bind.Xs <- rbind(nba.height.Xs, measure.height.Xs);
 height.prop.merge.Xs <- height.prop.bind.Xs %>% select(-height) %>%
   melt(.,c(1:3));
 
+```
+
+```{r,appendix-summary,message=FALSE, eval=FALSE}
+
+myData = as.matrix(cbind(measure.X.nba[, -c(1:3)],nba.X[-181:-193,-c(1:3)]));
+myNames = c("Hand Length (cm)", "Hand Width (cm)",  
+            "Height (cm)", "Reach (cm)", "Wingspan (cm)",
+            "Pro Hand Length (cm)", "Pro Hand Width (cm)", 
+            "Pro Height (cm)", "Pro Reach (cm)", "Pro Wingspan (cm)");
+
+
+buildLatexCorrelationTable(myData = myData, 
+                                myFile = paste0(getwd(),"/tables/","table-correlation-measure-nba-noR.tex"),
+                                myLabel = "table:correlation",
+                                myCaption = "Descriptive Statistics and Correlation Analysis of Participants and Professionals Scaled to Height",
+                                myNames = myNames,
+                                rotateTable=TRUE,
+                                rowDivider = TRUE,
+                                space.between = "1mm",
+                                width.table = 0.99,
+                                width.names = "1.5cm", # this includes space to M
+                                space.M.SD = "0.5mm",
+                                space.SD.corr = "0.5mm",
+                                showOnes = "center" # options are "center" or "left" or NULL
+                                )
+
+myData2 = as.matrix(cbind(measure.height.Xs[, -c(1:3, 6)],nba.height.Xs[-181:-193,-c(1:3, 6)]));
+myNames2 = c("Hand Length (cm)", "Hand Width (cm)",  
+             "Reach (cm)", "Wingspan (cm)",
+            "Pro Hand Length (cm)", "Pro Hand Width (cm)", 
+            "Pro Reach (cm)", "Pro Wingspan (cm)");
+
+
+buildLatexCorrelationTable(myData = myData2, 
+                                myFile = paste0(getwd(),"/tables/","table-scale-correlation-measure-nba-noR.tex"),
+                                myLabel = "table:correlation",
+                                myCaption = "Descriptive Statistics and Correlation Analysis of Participants and Professionals Scaled to Height",
+                                myNames = myNames2,
+                                rotateTable=TRUE,
+                                rowDivider = TRUE,
+                                space.between = "1mm",
+                                width.table = 0.99,
+                                width.names = "1.5cm", # this includes space to M
+                                space.M.SD = "0.5mm",
+                                space.SD.corr = "0.5mm",
+                                showOnes = "center" # options are "center" or "left" or NULL
+                                )
 ```
 
 \subsection{Images}
@@ -273,45 +322,3 @@ measure.nba.cluster = cluster.measure.nba.features(measure.df = measure.X.nba,
 plot(measure.nba.cluster)
 ```
 
-```{r,appendix-summary,message=FALSE, eval=FALSE}
-
-myData = as.matrix(cbind(measure.X.nba[, -c(1:3)],nba.X[-181:-193,-c(1:3)]));
-myNames = c("Hand Length (cm)", "Hand Width (cm)",  "Height (cm)", "Reach (cm)", "Wingspan (cm)",
-            "Pro Hand Length (cm)", "Pro Hand Width (cm)", "Pro Height (cm)", "Pro Reach (cm)", "Pro Wingspan (cm)");
-
-
-buildLatexCorrelationTable(myData = myData, 
-                                myFile = paste0(getwd(),"/tables/","table-correlation-measure-nba-noR.tex"),
-                                myLabel = "table:correlation",
-                                myCaption = "Descriptive Statistics and Correlation Analysis of Participants and Professionals Scaled to Height",
-                                myNames = myNames,
-                                rotateTable=TRUE,
-                                rowDivider = TRUE,
-                                space.between = "1mm",
-                                width.table = 0.99,
-                                width.names = "1.5cm", # this includes space to M
-                                space.M.SD = "0.5mm",
-                                space.SD.corr = "0.5mm",
-                                showOnes = "center" # options are "center" or "left" or NULL
-                                )
-
-myData2 = as.matrix(cbind(measure.height.Xs[, -c(1:3, 6)],nba.height.Xs[-181:-193,-c(1:3, 6)]));
-myNames2 = c("Hand Length (cm)", "Hand Width (cm)",  "Reach (cm)", "Wingspan (cm)",
-            "Pro Hand Length (cm)", "Pro Hand Width (cm)", "Pro Reach (cm)", "Pro Wingspan (cm)");
-
-
-buildLatexCorrelationTable(myData = myData2, 
-                                myFile = paste0(getwd(),"/tables/","table-scale-correlation-measure-nba-noR.tex"),
-                                myLabel = "table:correlation",
-                                myCaption = "Descriptive Statistics and Correlation Analysis of Participants and Professionals Scaled to Height",
-                                myNames = myNames2,
-                                rotateTable=TRUE,
-                                rowDivider = TRUE,
-                                space.between = "1mm",
-                                width.table = 0.99,
-                                width.names = "1.5cm", # this includes space to M
-                                space.M.SD = "0.5mm",
-                                space.SD.corr = "0.5mm",
-                                showOnes = "center" # options are "center" or "left" or NULL
-                                )
-```
